--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
 
     <!--header scetion-->
 
-    <div class="section1">
+    <div class="section1" id="home">
 
         <!--Nav Bar-->
 
         <nav>
 
             <div class="logo-container">
-                <a href="">
+                <a href="index.html">
                     <img src="Assets/Icons/logo (2).png" alt="background-image" width="100%">
                 </a>
             </div>
 
             <div class="navigations">
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
                 <a href="">Catalog</a>
                 <a href="">Gallery</a>
-                <a href="">Blog</a>
-                <a href="">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </div>
 
             <div class="icons">
@@ -49,11 +48,10 @@
             </div>
 
             <div id="mobile-menu-navigations" class="mobile-menu-navigations hide-mobile-menu-navigations">
-                <a href="">Home</a>
+                <a href="home.html">Home</a>
                 <a href="">Catalog</a>
                 <a href="">Gallery</a>
-                <a href="">Blog</a>
-                <a href="">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </div>
             
         </nav>
