--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <nav class="black-background">
+    <nav id="navbar">
 
         <div class="logo-container">
             <a href="index.html">
@@ -27,7 +27,7 @@
         </div>
 
         <div class="icons">
-            <a href="">
+            <a href="signIn.html">
                 <img src="Assets/Icons/person-icon.png" alt="person icon" width="100%">
             </a>
 
@@ -42,10 +42,12 @@
         </div>
 
         <div id="mobile-menu-navigations" class="mobile-menu-navigations hide-mobile-menu-navigations">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="">Catalog</a>
             <a href="">Gallery</a>
             <a href="contact.html">Contact Us</a>
+            <a href="signIn.html">Log in</a>
+            <a href="">Cart</a>
         </div>
         
     </nav>
