--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!--Nav Bar-->
 
-        <nav>
+        <nav id="navbar">
 
             <div class="logo-container">
                 <a href="index.html">
@@ -33,7 +33,7 @@
             </div>
 
             <div class="icons">
-                <a href="">
+                <a href="signIn.html">
                     <img src="Assets/Icons/person-icon.png" alt="person icon" width="100%">
                 </a>
 
@@ -52,6 +52,8 @@
                 <a href="">Catalog</a>
                 <a href="">Gallery</a>
                 <a href="contact.html">Contact Us</a>
+                <a href="signIn.html">Log in</a>
+                <a href="">Cart</a>
             </div>
             
         </nav>
