added catalog page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
             <div class="navigations">
                 <a href="index.html">Home</a>
-                <a href="">Catalog</a>
-                <a href="">Gallery</a>
+                <a href="catalog.html">Catalog</a>
                 <a href="contact.html">Contact Us</a>
             </div>
 
@@ -48,9 +47,8 @@
             </div>
 
             <div id="mobile-menu-navigations" class="mobile-menu-navigations hide-mobile-menu-navigations">
-                <a href="home.html">Home</a>
-                <a href="">Catalog</a>
-                <a href="">Gallery</a>
+                <a href="index.html">Home</a>
+                <a href="catalog.html">Catalog</a>
                 <a href="contact.html">Contact Us</a>
                 <a href="signIn.html">Log in</a>
                 <a href="">Cart</a>
@@ -63,7 +61,7 @@
                 Crafted for Your  <span>Unique</span> Sparkle
             </p>
 
-            <a class="btn" href="">View Products</a>
+            <a class="btn" href="catalog.html">View Products</a>
         </div>
     </div>
 
@@ -84,7 +82,7 @@
                 <br>Thank you for choosing FAN Jewellery.
             </p>
 
-            <a class="btn shop-now" href="">Shop now</a>
+            <a class="btn shop-now" href="catalog.html">Shop now</a>
         </div>
     </div>
 
