--- a/signUp.html
+++ b/signUp.html
@@ -32,11 +32,11 @@
 
                 <div class="names">
 
-                    <div>
+                    <div class="flex-1">
                         <label for="fname">First name</label>
                         <input type="text" name="first_name" id="fname" required>
                     </div>
-                    <div>
+                    <div class="flex-1">
                         <label for="lname">Last name</label>
                         <input type="text" name="last_name" id="lname" required>
                     </div>
