--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,7 @@
 
         <div class="navigations">
             <a href="index.html">Home</a>
-            <a href="">Catalog</a>
-            <a href="">Gallery</a>
+            <a href="catalog.html">Catalog</a>
             <a href="contact.html">Contact Us</a>
         </div>
 
@@ -43,8 +42,7 @@
 
         <div id="mobile-menu-navigations" class="mobile-menu-navigations hide-mobile-menu-navigations">
             <a href="index.html">Home</a>
-            <a href="">Catalog</a>
-            <a href="">Gallery</a>
+            <a href="catalog.html">Catalog</a>
             <a href="contact.html">Contact Us</a>
             <a href="signIn.html">Log in</a>
             <a href="">Cart</a>
